# twg-2025-2

./: .gitignore  Cargo.toml  README.md
assets/models/: beetle.glb  boss.glb  glutton.glb  gun1.glb  gun2.glb  gun3.glb  gun4.glb  gun5.glb  heart.glb  mushroom.glb  seal.glb  spider.glb  stalker.glb  tree.glb  turret.glb  wolf.glb  wormbeak.glb
assets/shaders/: enemy.wgsl  terrain.wgsl
src/: boss.rs  enemies.rs  enemy.rs  heart.rs  level.rs  main.rs  model_loader.rs  player.rs  projectile.rs  terrain.rs  ui.rs  weapon.rs
src/enemies/: spider.rs
src/enemy/: beetle.rs  glutton.rs  mushroom.rs  seal.rs  spider.rs  stalker.rs  tree.rs  turret.rs  wolf.rs  wormbeak.rs
src/projectile/: beetle_proj.rs  biogun_proj.rs  blaster_proj.rs  boss_proj.rs  bullet.rs  detonation_bolt.rs  explosion.rs  ioncannon_proj.rs  pulserifle_proj.rs  stalker_proj.rs  tree_proj.rs  turret_proj.rs  wormbeak_proj.rs  zapper_proj.rs
src/weapon/: biogun.rs  blaster.rs  ion_cannon.rs  pulse_rifle.rs  zapper.rs
